fix another potentially misleading error message

BUG: 97257

svn path=/trunk/KDE/kdebase/runtime/; revision=1193616